--- a/ANGELES_ICT9Ruby_Q2Project_SANTOS_MANDY.html
+++ b/ANGELES_ICT9Ruby_Q2Project_SANTOS_MANDY.html
@@ -50,7 +50,7 @@
 		}
 	</style>
 </head>
-<body style="background-color: #D52B2B;">
+<body style="background-color: #E72222;">
 	<b><h1 id="H1" id="TOP">Jollibee Menu</h1></b><br>
 	<center><table border="2" cellpadding="5" id="Table"></center>
 		<tr>
